--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=UniSystem
-spring.datasource.url = jdbc:postgresql://localhost:5432/uniDatabase
-spring.datasource.username = postgres
-spring.datasource.password = 093224421
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.jpa.hibernate.ddl-auto=none
